2007-04-09  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-9
        
        * [JSPWIKI-233] Bugfix PreferencesTab.jsp

        * [JSPWIKI-232] Localization of (All) in the Edit Section dropdown.
        Also added localization to the language dropdown

        * [JSPWIKI-234] Added IS8601 date/time pattern to default prefs in JSPWiki.properties

        * Bugfix IE javascript crash on mouse-over handler

2008-04-09  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-8
        
        * [JSPWIKI-115]: Refactored VariableManager to use Reflection.
        Thanks to Stephen Solka.
        
        * [JSPWIKI-219]: Building now works if your username has a space.
        
        * [JSPWIKI-222]: Gone are the evil files which lurked into our
        distro file...  
        
        * Hacking attempts at manipulating the version parameter no longer 
        cause a slew of email to the admin...

2008-04-08  Janne Jalkanen <jalkanen@apache.org>

        * 2.7.0-svn-7
        
        * [JSPWIKI-56] Replaced MultiPartLibrary with Apache Commons
        FileUpload library, as MultiPartLibrary was LGPL.

2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-6
        
        * [JSPWIKI-233] Bugfix PreferencesTab.jsp
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-5
        
        * [JSPWIKI-230] Make TimeZone configuration more user-friendly. Adjusted all jsp time-formatting
        to take timezone setting into account. 
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * Commit related JIRA id's
        
2007-04-05  Dirk Frederickx <dirk.frederickx@gmail.com>

        * 2.7.0-svn-4
        
        * Refactored JS to support the Edit Suggestion box, so it's now fully based on mootools.
        The entries in the suggestion box are now clickable: the page or attachment link will be