@@ -124,7 +124,7 @@ fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
 	margin:0;
 	padding:0;
 	border:0;
-	outline:0;
+	outline:none;
 	vertical-align:baseline;
 }
 /* remember to define focus styles! */
