@@ -1,3 +1,12 @@
+2007-04-10  Dirk Frederickx <dirk.frederickx@gmail.com>
+
+        * 2.7.0-svn-10 - Javascript fixes for IE
+        
+        * [JSPWIKI-235] Bugfixes for Section edit handling in IE
+        
+        * Bugfixes for hide/show Favorites menu on mouse-click/hover.
+        
+
 2007-04-09  Dirk Frederickx <dirk.frederickx@gmail.com>
 
         * 2.7.0-svn-9
